fix: extra whitespace was still appearing sometimes

--- a/sass/base/_elements.scss
+++ b/sass/base/_elements.scss
@@ -352,7 +352,8 @@ svg.realtime-icon {
 
 .swipeable-tab {
   &.inactive {
-      max-height: 100vh;
+    // just an arbitrary small value
+      max-height: 1px;
   }
 }
 
